[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "teslemetry_stream"
version = "0.7.8"
license = "Apache-2.0"
description = "Teslemetry Streaming API library for Python"
readme = "README.md"
authors = [{ name = "Brett Adams", email = "hello@teslemetry.com" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["aiohttp"]

[project.urls]
"Source code" = "https://github.com/Teslemetry/teslemetry_stream"

[tool.setuptools.packages.find]
include = ["teslemetry_stream*"]
