[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "teslemetry_stream"
version = "0.9.0"
license = "Apache-2.0"
description = "Teslemetry Streaming API library for Python"
readme = "README.md"
authors = [{ name = "Brett Adams", email = "hello@teslemetry.com" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["aiohttp"]

[project.urls]
"Source code" = "https://github.com/Teslemetry/teslemetry_stream"

[tool.setuptools.packages.find]
include = ["teslemetry_stream*"]

[tool.setuptools.package-data]
teslemetry_stream = ["py.typed"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
